--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,18 @@
     <Button
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:text="miBoton"
+        android:layout_height="wrap_content"
+        android:text="@string/text_btn"
         android:layout_gravity="bottom|center_horizontal"/>
 
     <TextView
-        android:id="@+id/contador"
+        android:id="@+id/lbl_contador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="#FFFFFF"
         android:gravity="center"
-        android:text=""
+        android:text="0"
         android:textSize="40sp" />
 
 </FrameLayout>
